UI+Haptics+Touch
Added functionality for user interface.

--- a/gui/prj.conf
+++ b/gui/prj.conf
@@ -9,8 +9,11 @@ CONFIG_ILI9342C=y
 
 # Additional configs that may be needed
 CONFIG_MIPI_DBI=y
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=3
 
 # For better debugging
 CONFIG_ASSERT=y
+
+CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
+
+CONFIG_REGULATOR=y
+CONFIG_I2C=y
