--- a/touch/CMakeLists.txt
+++ b/touch/CMakeLists.txt
@@ -1,17 +1,14 @@
 #REF: https://github.com/zephyrproject-rtos/zephyr/blob/main/samples/basic/threads/prj.conf 
 cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(m5stack_gui_with_haptics)
+project(touchtest)
 
 # Add source files from both gui and haptics modules
 target_sources(app PRIVATE 
     src/main.c
-    src/display.c
-    ../haptics/src/haptics.c
 )
 
 # Add include directories for both modules
 target_include_directories(app PRIVATE 
     src
-    ../haptics/src
 )
