--- a/user_interface/CMakeLists.txt
+++ b/user_interface/CMakeLists.txt
@@ -5,13 +5,14 @@ project(m5stack_gui_with_haptics)
 
 # Add source files from both gui and haptics modules
 target_sources(app PRIVATE 
-    src/main.c
-    src/display.c
+    src/ui.c
     ../haptics/src/haptics.c
+    ../gui/src/display.c
 )
 
 # Add include directories for both modules
 target_include_directories(app PRIVATE 
     src
     ../haptics/src
+    ../gui/src
 )
